--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ on:
       - feature/*
       - hotfix/*
       - release/*
-      - develop
+      - dev*
 
 env:
   # solution path doesn't need slashes unless there it is multiple folders deep
