--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,7 @@ on:
 env:
   # solution path doesn't need slashes unless there it is multiple folders deep
   # solution name does not include extension. .sln is assumed
-  SOLUTION_PATH: epi-utilities-countdown_timer
+  SOLUTION_PATH: src/
   SOLUTION_FILE: epi-utilities-countdown_timer
   # Do not edit this, we're just creating it here
   VERSION: 0.0.0-buildtype-buildnumber
