--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,7 @@ on:
 env:
   # solution path doesn't need slashes unless there it is multiple folders deep
   # solution name does not include extension. .sln is assumed
-  SOLUTION_PATH: src/
+  SOLUTION_PATH: \
   SOLUTION_FILE: epi-utilities-countdown_timer
   # Do not edit this, we're just creating it here
   VERSION: 0.0.0-buildtype-buildnumber
@@ -24,17 +24,10 @@ jobs:
       # First we checkout the source repo
       - name: Checkout repo
         uses: actions/checkout@v2
-      # And any submodules
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          git config --global url."https://github.com/".insteadOf "git@github.com:"
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-      # Fetch all tags
-      - name: Fetch tags
-        run: git fetch --tags
+        with:
+          fetch-depth: 0
+          submodules: true
+          token: ${{ secrets.PLUGIN_ACTION_TOKEN }}
       # Generate the appropriate version number
       - name: Set Version Number
         shell: powershell
@@ -47,6 +40,12 @@ jobs:
         run: |
           Write-Output ${{ env.VERSION }}
           ./.github/scripts/UpdateAssemblyVersion.ps1 ${{ env.VERSION }}
+      # Login to Docker
+      - name: Login to Docker
+        uses: azure/docker-login@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       # Build the solutions in the docker image
       - name: Build Solution
         shell: powershell
