--- a/.github/workflows/essentialsplugins-betabuilds-caller.yml
+++ b/.github/workflows/essentialsplugins-betabuilds-caller.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   call-workflow:
-    uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-builds.yml@main
+    uses: PepperDash/workflow-templates/.github/workflows/essentialsplugins-builds.yml@fix/apikey
     secrets: inherit
     with: 
       branch: ${{ github.ref_name }}
