chore: countupTimer: remove TimeSpan null check, add Unit-Test for future reference, revise bridge ip id to match Unit-Test.

--- a/src/configurationFile.json
+++ b/src/configurationFile.json
@@ -51,7 +51,7 @@
               "address": "127.0.0.2",
               "port": 0
             },
-            "ipid": "a4",
+            "ipid": "aa",
             "method": "ipidTcp"
           },
           "devices": [
