Update project metadata and license for epi-utilities-timer plugin
- Changed product name from "PepperDash Essentials Plugin Template" to "PepperDash Essentials Plugin".
- Updated repository URL to point to the new epi-utilities-timer repository.
- Modified project file to reflect new assembly title and package ID.
- Removed references to old project files and updated package references.
- Added a LICENSE.md file with the MIT License.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,9 +4,9 @@
     <InformationalVersion>$(Version)</InformationalVersion>
     <Authors>PepperDash Technologies</Authors>
     <Company>PepperDash Technologies</Company>
-    <Product>PepperDash Essentials Plugin Template</Product>
+    <Product>PepperDash Essentials Plugin</Product>
     <Copyright>Copyright © 2025</Copyright>
-    <RepositoryUrl>https://github.com/PepperDash/EssentialsPluginTemplate.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/PepperDash/epi-utilities-timer.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Crestron; 4series</PackageTags>
     <PackageOutputPath>../output</PackageOutputPath>
