--- a/src/epi-utilities-timer.4Series.csproj
+++ b/src/epi-utilities-timer.4Series.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<ProjectType>ProgramLibrary</ProjectType>
 	</PropertyGroup>
@@ -6,7 +6,7 @@
 		<TargetFramework>net472</TargetFramework>
 		<RootNamespace>PepperDash.Essentials.Plugin</RootNamespace>
 		<Deterministic>false</Deterministic>
-		<AssemblyTitle>PepperDash.Essentials.Plugin.Make.Model</AssemblyTitle>
+		<AssemblyTitle>PepperDash.Essentials.Plugin.Utilities.Timer</AssemblyTitle>
 		<Company>PepperDash Technologies</Company>
 		<Description>This software is a template for a PepperDash Essentials Plugin.</Description>
 		<Copyright>Copyright 2025</Copyright>
@@ -15,9 +15,9 @@
 		<InformationalVersion>$(Version)</InformationalVersion>
 		<OutputPath>4Series\bin\$(Configuration)\</OutputPath>
 		<Authors>PepperDash Technologies</Authors>
-		<PackageId>Pepperdash.Essentials.Plugins.Template</PackageId>
-		<PackageProjectUrl>https://github.com/PepperDash/EssentialsPluginTemplate.git</PackageProjectUrl>
-		<PackageTags>crestron 4series essentials plugin template</PackageTags>
+		<PackageId>Pepperdash.Essentials.Plugins.Utilities.Timer</PackageId>
+		<PackageProjectUrl>https://github.com/PepperDash/epi-utilities-timer.git</PackageProjectUrl>
+		<PackageTags>crestron 4series essentials plugin utilities timer</PackageTags>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -31,18 +31,20 @@
 	</ItemGroup>
 
 	<ItemGroup>
-    <None Remove="epi-make-model.projectinfo" />
+    <None Remove="epi-utilities-timer.projectinfo" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PepperDashEssentials" Version="2.0.0-hotfix-2613" />
+    <None Remove="../output\epi-utilities-timer.4Series.1.0.0-local.cplz" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="../output\epi-make-model.4Series.1.0.0-local.cplz" />
+    <None Remove="../output\epi-utilties-timer.4Series.1.0.0-local.cplz" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="../output\epi-make-model.4Series.1.0.0-local.cplz" />
+    <PackageReference Include="PepperDashEssentials" Version="2.4.4">
+    <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
