--- a/packages.config
+++ b/packages.config
@@ -1,3 +1,3 @@
 <packages>
-  <package id="PepperDashEssentials" version="2.0.0-alpha-2600" targetFramework="net47" allowedVersions="[1.0,2.0)"/>
+  <package id="PepperDashEssentials" version="2.4.4" targetFramework="net47" allowedVersions="[1.0,2.0)"/>
 </packages>
