--- a/src/epi-utilities-timer.4Series.csproj
+++ b/src/epi-utilities-timer.4Series.csproj
@@ -4,7 +4,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<TargetFramework>net472</TargetFramework>
-		<RootNamespace>PepperDash.Essentials.Plugin</RootNamespace>
+		<RootNamespace>CountdownTimerEpi</RootNamespace>
 		<Deterministic>false</Deterministic>
 		<AssemblyTitle>PepperDash.Essentials.Plugin.Utilities.Timer</AssemblyTitle>
 		<Company>PepperDash Technologies</Company>
@@ -15,7 +15,7 @@
 		<InformationalVersion>$(Version)</InformationalVersion>
 		<OutputPath>4Series\bin\$(Configuration)\</OutputPath>
 		<Authors>PepperDash Technologies</Authors>
-		<PackageId>Pepperdash.Essentials.Plugins.Utilities.Timer</PackageId>
+		<PackageId>Pepperdash.Essentials.Plugin.Utilities.Timer</PackageId>
 		<PackageProjectUrl>https://github.com/PepperDash/epi-utilities-timer.git</PackageProjectUrl>
 		<PackageTags>crestron 4series essentials plugin utilities timer</PackageTags>
 	</PropertyGroup>
