--- a/src/epi-utilities-timer.4Series.csproj
+++ b/src/epi-utilities-timer.4Series.csproj
@@ -15,7 +15,7 @@
 		<InformationalVersion>$(Version)</InformationalVersion>
 		<OutputPath>4Series\bin\$(Configuration)\</OutputPath>
 		<Authors>PepperDash Technologies</Authors>
-		<PackageId>Pepperdash.Essentials.Plugin.Utilities.Timer</PackageId>
+		<PackageId>Pepperdash.Essentials.Plugin.UtilitiesTimer</PackageId>
 		<PackageProjectUrl>https://github.com/PepperDash/epi-utilities-timer.git</PackageProjectUrl>
 		<PackageTags>crestron 4series essentials plugin utilities timer</PackageTags>
 	</PropertyGroup>
